hphp/hack/test/typecheck/expression_trees/invalid_call3.php.exp
File "invalid_call3.php", line 6, characters 14-23:
`ExampleInt` does not support this operator (it has no instance method named `__unwrap`) (Typing[4053])
